# zyxel-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  zyxel-cli
.github/workflows/: ci.yml  publish.yml
zyxel_cli/: __init__.py  cli.py
